--- a/index.html
+++ b/index.html
@@ -72,10 +72,18 @@
     <a-scene id="scene" embedded arjs vr-mode-ui="enabled: false"
         renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;">
         <!-- <a-marker preset="hiro" smooth="true"> -->
-        <a-marker type="pattern" url="assets/custom-marker/pattern-nssnt.patt" smooth="true">
+        <a-marker type="pattern" url="/assets/custom-marker/pattern-digsys.patt" smooth="true">
             <a-entity position="0 0 0" rotation="270 0 0">
-                <a-entity id='theModel' position="-0.2 0 0" rotation="0 0 0" gltf-model="./assets/3d-models/model.glb"
-                    scale="3.5 3.5 3.5 3.5">
+                <a-entity id='theModel' position="-0.1 -0.5 0" rotation="0 180 0"
+                    gltf-model="./assets/3d-models/digsys-model.glb" scale="3.6 3.6 3.6 3.6">
+                </a-entity>
+            </a-entity>
+        </a-marker>
+
+        <a-marker type="pattern" url="/assets/custom-marker/pattern-ethyne.patt" smooth="true">
+            <a-entity position="0 0 0" rotation="270 0 0">
+                <a-entity id='theModel' position="-0.1 -0.5 0" rotation="0 180 0"
+                    gltf-model="./assets/3d-models/ethyne.glb" scale="3.6 3.6 3.6 3.6">
                 </a-entity>
             </a-entity>
         </a-marker>
